--- a/roles/satellite-client/tasks/main.yml
+++ b/roles/satellite-client/tasks/main.yml
@@ -1,7 +1,13 @@
 ---
-# vim: sw=4 ts=102 ai
-# tasks file for satellite
-- include: install_packages.yml
-  tags: [satellite,packages]
-- include: network.yml
-  tags: [satellite,networks]
+# vim: ts=2 sw=2 expandtab ai
+# tasks file for satellite-client
+
+- include_role:
+    name: satellite-shared
+    tasks_from: lookup_org_loc.yml
+  when:
+    - org_id is not defined or loc_id is not defined
+    - org_id | length == 0 or loc_id | length == 0
+
+- include: subscriptions.yml
+  tags: [satellite-client,satellite-client-subscriptions]
