--- a/roles/satellite-capsule/defaults/main.yml
+++ b/roles/satellite-capsule/defaults/main.yml
@@ -1,7 +1,14 @@
 ---
-# defaults file for satellite
-
-satellite_user: admin
-satellite_pass: redhat123
-satellite_default_location: LocalNet
-satellite_default_organization: Demo62
+# vim: ts=2 sw=2 expandtab ai
+# defaults file for satellite-capsules
+satellite_capsule_repos:
+  - rhel-7-server-rpms
+  - "rhel-7-server-satellite-capsule-{{ satellite_version }}-rpms"
+  - rhel-server-rhscl-7-rpms
+  - "rhel-7-server-satellite-tools-{{ satellite_tools_version }}-rpms"
+satellite_smartproxy:
+has_ha_smartproxy: "{{ satellite_smartproxy | length > 0 }}"
+satellite_packages:
+  - satellite-capsule
+  - bind-utils
+  - vim
