--- a/roles/vms-ovirt/handlers/main.yml
+++ b/roles/vms-ovirt/handlers/main.yml
@@ -5,16 +5,7 @@
   listen: waiting for server start
   vars:
     dbg_data:
-      delegate_to: "{{ router_server_ip if inventory_hostname in groups.proxied else 'localhost' }}"
+      delegate_to: "{{ delegate_ip }}"
       remote_user: "{{ ansible_user }}"
       host: "{{ vm_cloud_init_nics.0.ip | ipaddr('address') }}"
-
-- name: waiting for server start
-  wait_for:
-    host: "{{ vm_cloud_init_nics.0.ip | ipaddr('address') }}"
-    search_regex: OpenSSH
-    delay: 10
-    port: 22
-    state: started
-  delegate_to: "{{ router_server_ip if inventory_hostname in groups.proxied else 'localhost' }}"
-  remote_user: "{{ ansible_user }}"
+  tags: [ always ]
