--- a/playbooks/roles/satellite-server/defaults/main.yml
+++ b/playbooks/roles/satellite-server/defaults/main.yml
@@ -4,9 +4,8 @@
 
 ###
 # !!!!! OVERRIDE !!!!!
-# These you NEED to override one of these sections
+# These you NEED to override one of these sections in inventory or as extras var
 ###
-# must override at least one of these
 #
 ## shared: satellite_version: "6.3"
 # 99% of the time, the tools version is the same - unless we're testing QA builds
@@ -16,6 +15,9 @@ satellite_rhsm_user: ""
 satellite_rhsm_pass: ""
 # or must supply a manifest file
 satellite_manifest_file: ""
+# override the Activation Key subscription selection
+subscription_sku_rhel: RH00003
+subscription_sku_capsule: MCT3718
 ###
 # END OF OVERRIDE
 ###
@@ -24,8 +26,6 @@ satellite_manifest_file: ""
 # +++++ OPTIONAL +++++
 # These you MIGHT want to customize
 ###
-# Subscriptions used for Activation Key
-satellite_subscription_ak: [ "Red Hat Enterprise Linux Server with Smart Management, Premium (Physical or Virtual Nodes)" ]
 # entries that could be customize for the satellite install
 ## shared: satellite_user: admin
 ## shared: satellite_pass: redhat123
@@ -49,9 +49,9 @@ satellite_hammer_configure_CV_filters: false
 # You shouldn't need to customize anything in here
 ###
 # need to know ourselves
-## sahred: satellite_server: "{{ groups['satellites'][0] }}"
-## sahred: satellite_server_ip: "{{ lookup('gethostbyname', hostvars[satellite_server].ansible_host) }}"
-## sahred: satellite_server_hostname: "{{ hostvars[satellite_server].inventory_hostname }}"
+## shared: satellite_server: "{{ groups['satellites'][0] }}"
+## shared: satellite_server_ip: "{{ lookup('gethostbyname', hostvars[satellite_server].ansible_host) }}"
+## shared: satellite_server_hostname: "{{ hostvars[satellite_server].inventory_hostname }}"
 # where the role will put the manifest file for upload
 satellite_manifest_file_dest: "/tmp/manifest.zip"
 
@@ -97,7 +97,33 @@ satellite_hammer_views:
   ak: "RHEL7-BASE"
   override: [ "rhel-7-server-satellite-tools-{{ satellite_tools_version }}-rpms" ]
   varname: "RHEL7Server"
-  ak_product_ids: [ "RH00002", "RH00003" ]
+  ak_product_ids:
+    - "{{ subscription_sku_rhel }}"
+    - RH00003        # Red Hat Enterprise Linux Server, Premium (Physical or Virtual Nodes)
+    - RH00004        # Red Hat Enterprise Linux Server, Standard (Physical or Virtual Nodes)
+    - RH00005        # Red Hat Enterprise Linux Server Entry Level, Self-support
+    - RH00008        # Red Hat Enterprise Linux Server with Smart Management, Premium (Physical or Virtual Nodes)
+    - RH00009        # Red Hat Enterprise Linux Server with Smart Management, Standard (Physical or Virtual Nodes)
+    - RH00010        # Red Hat Enterprise Linux Server Entry Level with Smart Management, Self-support
+    - RH00013        # Red Hat Enterprise Linux Server (Disaster Recovery), Premium (Physical or Virtual Nodes)
+    - RH00014        # Red Hat Enterprise Linux Server (Disaster Recovery), Standard (Physical or Virtual Nodes)
+    - RH00015        # Red Hat Enterprise Linux Server Entry Level (Disaster Recovery), Self-support
+    - RH00018        # Red Hat Enterprise Linux Server with Smart Management (Disaster Recovery), Premium (Physical or Virtual Nodes)
+    - RH00019        # Red Hat Enterprise Linux Server with Smart Management (Disaster Recovery), Standard (Physical or Virtual Nodes)
+    - RH00020        # Red Hat Enterprise Linux Server Entry Level with Smart Management (Disaster Recovery), Self-support
+    - RH00023        # Red Hat Enterprise Linux Server with Smart Management & Resilient Storage, Premium (Physical or Virtual Nodes)
+    - RH00024        # Red Hat Enterprise Linux Server with Smart Management & Resilient Storage, Standard (Physical or Virtual Nodes)
+    - RH00065        # 30 Day Red Hat Enterprise Linux Server Self-Supported Evaluation
+    - RH00066        # 30 Day Red Hat Enterprise Linux Server Supported Evaluation with Smart Management, Monitoring and all Add-Ons
+    - RH00067        # 60 Day Red Hat Enterprise Linux Server Supported Evaluation with Smart Management, Monitoring and all Add-Ons
+    - RH00068        # 90 Day Red Hat Enterprise Linux Server Supported Evaluation with Smart Management, Monitoring and all Add-Ons
+    - RH00069        # Red Hat Enterprise Linux Server Beta
+    - RH00072        # Red Hat Enterprise Linux Server Beta for HPC Compute Node
+    - RH00431        # Red Hat Enterprise Linux Self-Supported (NFR)
+    - RH00798        # Red Hat Developer Subscription
+    - RH2262474      # Red Hat Enterprise Linux Developer Suite
+    - RH2264664      # Red Hat Enterprise Linux Developer Support, Enterprise
+    - RH2282403      # Red Hat Enterprise Linux Developer Support, Professional
 - name: "RHEL7-Capsule"
   repos: [ "rhscl", "base", "capsule", "sattools" ]
   ak: "RHEL7-CAPSULE"
@@ -106,7 +132,27 @@ satellite_hammer_views:
     - "rhel-7-server-satellite-capsule-{{ satellite_version }}-rpms"
     - "rhel-7-server-satellite-tools-{{ satellite_tools_version }}-rpms"
   varname: "RHEL7Capsule"
-  ak_product_ids: [ "SVC3124", "MCT3718" ]
+  ak_product_ids:
+    - "{{ subscription_sku_capsule }}"
+    - MCT3718   # Red Hat Satellite Infrastructure Subscription
+    - MCT3719   # Red Hat Satellite Infrastructure Subscription (Beta)
+    - MCT0369   # Red Hat Satellite Capsule Server
+    - MCT0403   # Red Hat Satellite Capsule Server (Special)
+    - MCT0427   # Red Hat Satellite Capsule Server (Old)
+    - MCT0941   # Red Hat Satellite Capsule Server (Old)
+    - MCT2047   # Red Hat Satellite Capsule Server (CCSP)
+    - MCT2535   # Red Hat Satellite Capsule Server (L3 Only)
+    - MCT3096   # Red Hat Satellite Capsule High Touch Beta
+    - MCT3098   # Red Hat Satellite Capsule Beta
+    - MCT3132   # Red Hat Satellite Capsule 6 (For Transition Only)
+    - MCT3262   # Red Hat Satellite Capsule Server (Capsule Server only, RHEL not included)
+    - MCT3713   # Red Hat Satellite Capsule Server, Premium (Embedded)
+    - RC0305160 # Red Hat Satellite and Capsule Server (CCSP)
+    - SER0206US # 90 Day Supported Red Hat Satellite Capsule Server Evaluation
+    - SER0228US # 30 Day Self-Supported Red Hat Satellite Capsule Server Evaluation
+    - SER0232US # Red Hat Satellite (Employee Testing)
+    - SER0269   # 60 Day Supported Red Hat Satellite Capsule Server Evaluation
+    - SER0302   # Red Hat Satellite Capsule Server (NFR)
 satellite_hammer_product: "Red Hat Enterprise Linux Server"
 satellite_hammer_basearch: "x86_64"
 satellite_hammer_release: "7Server"
@@ -127,14 +173,16 @@ KS_RELEASE: "{{ satellite_hammer_ks_release }}"
 
 # Satellite hammer repos
 # kickstart is always first
+#   1st field: repository set description
+#   2nd field: repository after selection - used to check if respository is actually enabled
 SAT_MAP:
   kickstart: [ "Red Hat Enterprise Linux 7 Server (Kickstart)", "Red Hat Enterprise Linux 7 Server Kickstart {{ BASEARCH }} {{ KS_RELEASE }}" ]
-  extras: [ "Red Hat Enterprise Linux 7 Server - Extras (RPMs)", "Red Hat Enterprise Linux 7 Server - Extras RPMs {{ BASEARCH }}" ] 
-  sattools: [ "Red Hat Satellite Tools {{ satellite_tools_version }} (for RHEL 7 Server) (RPMs)", "Red Hat Satellite Tools {{ satellite_tools_version }} for RHEL 7 Server RPMs {{ BASEARCH }}" ]
-  rhcommon: [ "Red Hat Enterprise Linux 7 Server - RH Common (RPMs)", "Red Hat Enterprise Linux 7 Server - RH Common RPMs {{ BASEARCH }} {{ RELEASE }}" ]
-  base: [ "Red Hat Enterprise Linux 7 Server (RPMs)", "Red Hat Enterprise Linux 7 Server RPMs {{ BASEARCH }} {{ RELEASE }}" ]
-  capsule: [ "Red Hat Satellite Capsule 6.3 (for RHEL 7 Server) (RPMs)", "Red Hat Satellite Capsule 6.3 for RHEL 7 Server RPMs {{ BASEARCH }}" ]
-  rhscl: [ "Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server", "Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server {{ BASEARCH }} {{ RELEASE }}" ]
+  extras:    [ "Red Hat Enterprise Linux 7 Server - Extras (RPMs)", "Red Hat Enterprise Linux 7 Server - Extras RPMs {{ BASEARCH }}" ] 
+  sattools:  [ "Red Hat Satellite Tools {{ satellite_tools_version }} (for RHEL 7 Server) (RPMs)", "Red Hat Satellite Tools {{ satellite_tools_version }} for RHEL 7 Server RPMs {{ BASEARCH }}" ]
+  rhcommon:  [ "Red Hat Enterprise Linux 7 Server - RH Common (RPMs)", "Red Hat Enterprise Linux 7 Server - RH Common RPMs {{ BASEARCH }} {{ RELEASE }}" ]
+  base:      [ "Red Hat Enterprise Linux 7 Server (RPMs)", "Red Hat Enterprise Linux 7 Server RPMs {{ BASEARCH }} {{ RELEASE }}" ]
+  capsule:   [ "Red Hat Satellite Capsule {{ satellite_version }} (for RHEL 7 Server) (RPMs)", "Red Hat Satellite Capsule {{ satellite_version }} for RHEL 7 Server RPMs {{ BASEARCH }}" ]
+  rhscl:     [ "Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server", "Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server {{ BASEARCH }} {{ RELEASE }}" ]
 
 satellite_hammer_repos:
   - { product: "{{ PROD }}", release: "{{ KS_RELEASE }}", basearch: "{{ BASEARCH }}", name: "{{SAT_MAP.kickstart.0}}", test: "{{SAT_MAP.kickstart.1}}" }
