trying to test capsule install with CA

--- a/playbooks/roles/satellite-capsule/tasks/satellite_install.yml
+++ b/playbooks/roles/satellite-capsule/tasks/satellite_install.yml
@@ -80,6 +80,7 @@
   when:
     - "hostvars[inventory_hostname].satellite_smartproxy | default('') | length > 0"
     - "inventory_hostname != groups.capsules[0]"
+    - false # XXX testing
   delegate_to: "{{ groups.capsules[0] }}"
   command: "flock /etc/passwd puppet cert generate {{ inventory_hostname }} --dns_alt_names={{ satellite_smartproxy }}"
   args:
@@ -91,6 +92,7 @@
   when:
     - "hostvars[inventory_hostname].satellite_smartproxy | default('') | length > 0"
     - "inventory_hostname != groups.capsules[0]"
+    - false # XXX testing
   delegate_to: "{{ groups.capsules[0] }}"
   archive:
     dest: "/tmp/{{ inventory_hostname }}-puppet-certs.tar.gz"
@@ -105,6 +107,7 @@
   when:
     - "hostvars[inventory_hostname].satellite_smartproxy | default('') | length > 0"
     - "inventory_hostname != groups.capsules[0]"
+    - false # XXX testing
   delegate_to: "{{ groups.capsules[0] }}"
   fetch:
     dest: /tmp/
@@ -115,6 +118,7 @@
   when:
     - "hostvars[inventory_hostname].satellite_smartproxy | default('') | length > 0"
     - "inventory_hostname != groups.capsules[0]"
+    - false # XXX testing
   copy:
     dest: "/root/{{ inventory_hostname }}-puppet-certs.tar.gz"
     src: "/tmp/{{ inventory_hostname }}-puppet-certs.tar.gz"
@@ -123,6 +127,7 @@
   when:
     - "hostvars[inventory_hostname].satellite_smartproxy | default('') | length > 0"
     - "inventory_hostname != groups.capsules[0]"
+    - false # XXX testing
   yum:
     name: "{{ puppet_server_package }}"
   vars:
@@ -132,6 +137,7 @@
   when:
     - "hostvars[inventory_hostname].satellite_smartproxy | default('') | length > 0"
     - "inventory_hostname != groups.capsules[0]"
+    - false # XXX testing
   shell: |
     mkdir {{ puppetlabs_etc }}/ssl
     tar -xvzf /root/{{ inventory_hostname }}-puppet-certs.tar.gz -C {{ puppetlabs_etc }}/ssl
@@ -154,12 +160,19 @@
     --foreman-proxy-content-pulp-oauth-secret {{ pulp_oauth_secret }}
     --foreman-proxy-content-certs-tar /root/{{ inventory_hostname }}-certs.tar
     {% if satellite_smartproxy | default('') | length > 0 %}
+    --puppet-ca-server={{ satellite_server_hostname }}
+    --puppet-puppetmaster={{ satellite_server_hostname }}
+    --puppet-server-ca-proxy=https://{{ satellite_server_hostname }}:8140
+    --puppet-server-ca=false
+    --foreman-proxy-puppetca=false
     --puppet-dns-alt-names {{ satellite_smartproxy }}
-    --puppet-ca-server {{ inventory_hostname }}
-    --foreman-proxy-puppetca false
-    --puppet-server-ca {{ (inventory_hostname == groups.capsules[0]) | ternary('true', 'false') }}
     {% endif %}
     --puppet-server-foreman-url {{ satellite_url }}
+# XXX: remove
+# --puppet-ca-server {{ inventory_hostname }}
+# --foreman-proxy-puppetca false
+# --puppet-server-ca {{ (inventory_hostname == groups.capsules[0]) | ternary('true', 'false') }}
+# XXX: remove
 
 - set_fact:
     satellite_is_installed: true
