--- a/playbooks/bulkactions.yml
+++ b/playbooks/bulkactions.yml
@@ -119,6 +119,8 @@
       file:
         path: ./inventory/sat-demo
         state: touch
+      vars:
+        ec2_instance_ids: "{{ ec2_instances.instances | map(attribute='instance_id') | list }}"
       when:
         - bulk == 'poweron'
         - ec2_instance_ids | length > 0
